--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forever Admin Panel</title>
+    <title>Forever</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"> </script>
+
+    <!-- Chatbot Embed code-->
+    <script>
+      window.watsonAssistantChatOptions = {
+        integrationID: "ad35547f-543c-480d-ade6-8c47997501ae", // The ID of this integration.
+        region: "au-syd", // The region your integration is hosted in.
+        serviceInstanceID: "f07c3ea5-4cdf-473d-8afd-d6ab02ee3ee0", // The ID of your service instance.
+        restartOnReload: true, // Clears conversation on page refresh
+        onLoad: async (instance) => { await instance.render(); }
+      };
+      setTimeout(function(){
+        const t=document.createElement('script');
+        t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+        document.head.appendChild(t);
+      });
+    </script>
   </body>
 </html>
